@@ -886,8 +886,7 @@
                          <option name="isSea" value="true"/>   
                          <option name="transportCapacity" value="5"/>   
                          <option name="attack" value="0"/>
-                         <option name="defense" value="1"/>
-                         <option name="isTransport" value="true"/>
+                         <option name="defense" value="1"/>                         
                     </attatchment>
             
                     <attatchment name="unitAttatchment" attatchTo="battleship" javaClass="games.strategy.triplea.attatchments.UnitAttachment" type="unitType">
